--- a/comtact.html
+++ b/comtact.html
@@ -15,7 +15,8 @@
 <body>
   <!-- <div class="maincontainer"> -->
   <div class="container5">
-    <h1>Featured Products</h1>
+    <div class="product">
+    Featured Products</div>
     <div class="container1">
       <div class="container2">
         <img src="image/img1.png" alt="" class="" />
